# api_medica

./: Dockerfile  LICENSE  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
core/: admin.py  models.py  serializers.py  settings.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py
